# thyme

./: .gitattributes  .gitignore  Cargo.toml  README.md  REFACTORING_SUMMARY.md  build.rs  debug_test.sh  test.rs  test.sql  test_all_syntax.js  test_functions.js  test_notebook.py  test_raw_string.rs  test_rust.rs  test_syntax.rs  test_syntax.sql
examples/: config-gutter-absolute.toml  config-gutter-relative.toml
src/: app.rs  autocomplete.rs  buffer.rs  cell.rs  commands.rs  config.rs  cursor.rs  direct_kernel.rs  editor.rs  event_loop.rs  events.rs  exit_prompt.rs  find_replace.rs  kernel.rs  kernel_selector.rs  lib.rs  main.rs  output_pane.rs  prompt.rs  renderer.rs  syntax.rs  text_utils.rs  ui.rs  unicode_utils.rs
src/editor/: file_ops.rs  matching.rs  mod.rs  mouse.rs  notebook.rs  selection.rs  viewport.rs
src/lsp/: client.rs  manager.rs  mod.rs
themes/: ayu-dark.toml  base16-ocean.toml  catppuccin-mocha.toml  cobalt.toml  dracula.toml  ember.toml  forest.toml  gruvbox-dark.toml  material-deep-ocean.toml  midnight.toml  monokai.toml  nord.toml  one-dark.toml  outrun.toml  oxocarbon.toml  palenight.toml  slate.toml  solarized-dark.toml  spacegray.toml  tokyo-night.toml  tomorrow-night.toml
tree-sitter-sql/queries/: highlights.scm
