[package]
name = "thyme"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
ropey = "1.6"

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

# Clipboard
arboard = "3.4"

[dev-dependencies]
# Add any test dependencies here if needed
