[package]
name = "thyme"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
ropey = "1.6"

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# Unicode support
unicode-width = "0.1"
unicode-segmentation = "1.11"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

# Clipboard
arboard = "3.4"

# Encoding detection and conversion
encoding_rs = "0.8"

[dev-dependencies]
# Add any test dependencies here if needed

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser", "consoleapi"] }