[package]
name = "sage"
version = "0.2.0"
edition = "2021"

[dependencies]
ropey = "1.6"
crossterm = "0.28"
arboard = "3.4"
unicode-width = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
zmq = "0.10"
uuid = { version = "1.0", features = ["v4"] }
glob = "0.3"